send feedback with raw html (already sanitized in contact farm)

--- a/app/templates/email/feedback.twig
+++ b/app/templates/email/feedback.twig
@@ -6,6 +6,6 @@
 <p>Feedback sent by {{sender}}:</p>
 
 <blockquote>
-	<p>"{{feedback}}"</p>
+	<p>"{{feedback|raw}}"</p>
 </blockquote>
 {% endblock %}
