--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -91,6 +91,31 @@ h1 small .label {
   padding: 20px 20px 5px 20px;
   margin-top: -1px;
 }
+@media (max-width: 480px) {
+  .nav-tabs > li {
+    float: none;
+  }
+  .nav-tabs > li.active > a,
+  .nav-tabs > li.active > a:hover,
+  .nav-tabs > li.active > a:focus {
+    border-bottom-color: #ddd;
+  }
+  .nav-tabs > li > a {
+    border-radius: 4px;
+    margin-right: 0px;
+  }
+  .nav-tabs {
+    margin-bottom: 8px;
+    border-bottom: none;
+  }
+  .btn {
+    display: block;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 5px;
+  }
+}
 .btn-google {
   color: #ffffff;
   background-color: #dd4b39;
