--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -19,9 +19,6 @@ a.text {
 .container#front {
   margin-top: 40px;
 }
-#front .carousel {
-  height: 417px;
-}
 footer {
   margin-top: 20px;
 }
@@ -114,6 +111,11 @@ h1 small .label {
     padding-left: 0;
     padding-right: 0;
     margin-top: 5px;
+  }
+}
+@media (min-width: 1200px) {
+  #front .carousel {
+    height: 417px;
   }
 }
 .btn-google {
