--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -111,6 +111,28 @@ h1 small .label {
 	margin-top: -1px;
 }
 
+h1 a, h1 a:hover, h1 a:active {
+	color: inherit;
+	text-decoration: none;
+}
+
+.resumable-progress {
+	float: right;
+	margin-right: 20px;
+}
+
+.resumable-complete {
+	color: green;
+}
+
+.resumable-error {
+	color: red;
+}
+
+.monospace {
+	font-family: monospace;
+}
+
 @media (max-width: @screen-xs-max) { 
     .nav-tabs > li {
         float: none;
