--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -88,6 +88,25 @@ h1 small .label {
   padding: 20px 20px 5px 20px;
   margin-top: -1px;
 }
+h1 a,
+h1 a:hover,
+h1 a:active {
+  color: inherit;
+  text-decoration: none;
+}
+.resumable-progress {
+  float: right;
+  margin-right: 20px;
+}
+.resumable-complete {
+  color: green;
+}
+.resumable-error {
+  color: red;
+}
+.monospace {
+  font-family: monospace;
+}
 @media (max-width: 767px) {
   .nav-tabs > li {
     float: none;
