pass state to javascript, fixing the upload page

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="{{title|default(brand)}}">
 		<meta property="og:image" content="{{component}}/lorry/img/logo.png">
 		<meta property="og:site_name" content="{{brand}}">
-		<script>var base = '{{base}}';</script>
+		<script>var base = '{{base}}', var state = '{{state}}';</script>
 	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
