added analog logging package

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -39,14 +39,14 @@
 			<dl>
 				<dt><a href="http://php.net">PHP</a></dt>
 				<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
-				<dt><a href="http://twig.sensiolabs.org">Twig</a></dt>
-				<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
-				<dt><a href="http://swiftmailer.org/">Swift Mailer</a></dt>
-				<dd>by Chris Corbyn, maintained by Fabien Potencier,</dd>
+				<dt><a href="http://twig.sensiolabs.org">Twig</a> / <a href="http://swiftmailer.org/">Swift Mailer</a></dt>
+				<dd>by <a href="http://fabien.potencier.org">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
 				<dt><a href="http://lesscss.org/">Less</a></dt>
 				<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
 				<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="http://lesscss.org/">OAuth 2.0 Client</a></dt>
-				<dd>by <a href="https://code.google.com/u/103055401176250561450/">lightopenid author</a> / <a href="http://thephpleague.com/">the PHP League</a>.</dd>
+				<dd>by <a href="https://code.google.com/u/103055401176250561450/">lightopenid author</a> / <a href="http://thephpleague.com/">the PHP League</a>,</dd>
+				<dt><a href="https://github.com/jbroadway/analog/">Analog</a></dt>
+				<dd>by <a href="https://github.com/jbroadway">Johnny Broadway</a>.</dd>
 			</dl>
 		</div>
 		<div class="col-md-4">
