--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -24,7 +24,7 @@
 			</div>
 			<h3 id="profiles">{% trans "Links" %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'profiles'} %}
-			<form role=form" method="post" action="{{filename}}?change-profiles">
+			<form role=form" method="post">
 				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="clonkforge">{% trans "Clonk Forge profile" %}</label>
@@ -35,7 +35,7 @@
 					<input type="text" class="form-control" name="github" id="github" value="{{github}}" placeholder="{{github_placeholder}}">
 				</div>
 				<div class="form-group">
-					<button type="submit" class="btn btn-default">{% trans "Save links" %}</button>
+					<button type="submit" class="btn btn-default" name="profiles-submit">{% trans "Save links" %}</button>
 				</div>
 			</form>
 		</div>
@@ -43,7 +43,7 @@
 			<h2 id="account">{% trans "Account" %}</h2>
 			<h3 id="contact">{% trans "Contact details" %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
-			<form role=form" method="post" action="{{filename}}?change-contact">
+			<form role=form" method="post">
 				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="email">{% trans "Email address" %}</label>
@@ -57,12 +57,13 @@
 					<button type="submit" class="btn btn-warning" name="resend">{% trans "Resend confirmation" %}</button>
 					{% endif %}
 				</div>
+			<input type="hidden" name="contact-submit">
 			{% if not activated %}
 			<div class="alert alert-warning">{% trans %}You need to confirm your email address.{% endtrans %}</div>
 			{% endif %}
 			</form>
 			<h3 id="language">{% trans "Language" %}</h3>
-			<form role=form" method="post" action="{{filename}}?change-language">
+			<form role=form" method="post">
 				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
 					<label for="language-setting">{% trans "View site in" %}</label>
@@ -71,6 +72,7 @@
 						<option value="de-DE"{% if language == "de-DE" %} selected{% endif %}>{% trans "German" %}</option>
 					</select>
 				</div>
+				<input type="hidden" name="language-submit">
 				<noscript>
 				<div class="form-group">
 					<button type="submit" class="btn btn-default">{% trans "Change language" %}</button>
@@ -78,23 +80,24 @@
 				</noscript>
 			</form>
 			<h3 id="remove-account">{% trans "Remove account" %}</h3>
-			<p><a href="#remove-account" data-toggle="collapse" data-target="#remove-account-confirm">{% trans %}Would you like to remove your account?{% endtrans %}</a></p>
-			<div class="collapse" id="remove-account-confirm">
-				<form role="form" method="post" action="{{filename}}?remove-account">
+			{% if not show_remove_account %}<p><a href="#remove-account" data-toggle="collapse" data-target="#remove-account-confirm">{% trans %}Would you like to remove your account?{% endtrans %}</a></p>{% endif %}
+			<div id="remove-account-confirm" class="collapse{% if show_remove_account %} in{% endif %}">
+				<form role="form" method="post">
 					<input type="hidden" name="state" value="{{state}}">
 					<div class="alert alert-danger">
 						<strong>{% trans %}Removing your account is final.{% endtrans %}</strong> {% trans %}You will permanently loose control of all your uploaded addons.{% endtrans %}
 					</div>
 					<label class="checkbox">
-						<input type="checkbox" id="remove-confirm"> {%trans "I have read and understood the warning." %}
+						<input type="checkbox" id="remove-confirm" name="confirm" required> {%trans "I have read and understood the warning." %}
 					</label>
 					<div class="form-group">
 						<label for="password">{% trans "Password" %}</label>
 						<input type="password" class="form-control remove-form-element" name="password" required disabled>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-danger remove-form-element" disabled>{% trans "Permanently remove account"%}</button>
+						<button type="submit" class="btn btn-danger remove-form-element" name="remove-account-submit" disabled>{% trans "Permanently remove account"%}</button>
 					</div>
+					{% include 'functions/alert.twig' with {'selector' : 'remove-account'} %}
 				</form>
 			</div>
 		</div>
@@ -102,7 +105,7 @@
 			<h2 id="security">{% trans "Security" %}</h2>
 			<h3 id="password">{% trans "Password" %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'password'} %}
-			<form role=form" method="post" id="form-password" action="{{filename}}?change-password">
+			<form role=form" method="post" id="form-password"">
 				<input type="hidden" name="state" value="{{state}}">
 				{% if password_exists %}
 				<div class="form-group">
@@ -119,16 +122,16 @@
 					<input type="password" class="form-control" name="password-confirm" id="password-confirm" required>
 				</div>
 				<div class="form-group">
-					<button type="submit" class="btn btn-default">{% if password_exists %}{% trans "Change password" %}{% else %}{% trans "Set password" %}{% endif %}</button>
+					<button type="submit" class="btn btn-default" name="password-submit">{% if password_exists %}{% trans "Change password" %}{% else %}{% trans "Set password" %}{% endif %}</button>
 				</div>
 			</form>
 			<h3 id="remote-logout">{% trans "Sessions" %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'remote-logout'} %}
 			<p><a href="#remote-logout" data-toggle="collapse" data-target="#remote-logout-confirm">{% trans %}Would you like to log out of all other devices?{% endtrans %}</a></p>
 			<div class="collapse" id="remote-logout-confirm">
-				<form method="post" action="{{filename}}?remote-logout" role=form">
+				<form method="post" role=form">
 					<input type="hidden" name="state" value="{{state}}">
-					<button type="submit" class="btn btn-warning">{% trans "Log out all other devices" %}</button>
+					<button type="submit" class="btn btn-warning"  name="remote-logout-submit">{% trans "Log out all other devices" %}</button>
 				</form>
 			</div>
 			<h4 id="oauth-services">{% trans "Login services" %}</h4>
