--- a/app/templates/email/base.twig
+++ b/app/templates/email/base.twig
@@ -4,5 +4,5 @@
 <p>{% trans %}No content available.{% endtrans %}</p>
 {% endblock %}
 --
-<p>{% trans %}Sent by {{brand}}{% endtrans %}<br>
+<p>{{brand}}<br>
 <a href="{{base}}">{{base}}</a></p>
