fix broken favicon url

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -5,7 +5,7 @@
 		<title>{{title|default(brand)}}</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="{{resources}}/lorry/img/favicon.ico" type="image/x-icon">
 		<link href="{{resources}}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{resources}}/lorry/css/lorry.css" rel="stylesheet">
 		<meta property="og:title" content="{{title|default(brand)}}">
