--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -30,7 +30,7 @@
 				</ul>
 			</div>
 		{% endif %}
-		{% if not self and user_administrator or (user_moderator and moderator == false) or true %}
+		{% if not self and user_administrator or (user_moderator and moderator == false) %}
 			<h3 id="moderate">{% trans %}Moderation{% endtrans %}</h3>
 			<p>
 				<a href="{{username}}/edit" class="btn btn-default">{% trans %}Edit user{% endtrans %}</a>
