make game tags colourful

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -87,6 +87,12 @@ dt {
 	vertical-align: text-bottom;
 }
 
+.media .label {
+	display: inline-block;
+	vertical-align: text-bottom;
+	margin-top: 0px;
+}
+
 textarea {
 	resize: vertical;
 }
@@ -131,6 +137,14 @@ h1 a, h1 a:hover, h1 a:active {
 
 .monospace {
 	font-family: monospace;
+}
+
+.badge-rage {
+	background-color: #c00;
+}
+
+.badge-openclonk {
+	background-color: gray;
 }
 
 @media (max-width: @screen-xs-max) { 
