--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -69,6 +69,11 @@ dt {
 .media .badge {
   vertical-align: text-bottom;
 }
+.media .label {
+  display: inline-block;
+  vertical-align: text-bottom;
+  margin-top: 0px;
+}
 textarea {
   resize: vertical;
 }
@@ -106,6 +111,12 @@ h1 a:active {
 }
 .monospace {
   font-family: monospace;
+}
+.badge-rage {
+  background-color: #c00;
+}
+.badge-openclonk {
+  background-color: gray;
 }
 @media (max-width: 767px) {
   .nav-tabs > li {
