improve publishing portal

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -14,7 +14,7 @@
 				{% for addon in addons %}
 				<li class="media media-addon">
 					<div class="pull-left">
-						<img class="media-object" src="http://placehold.it/76x57">
+						{% if addon.public %}<a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}">{% endif %}<img class="media-object" src="http://placehold.it/76x57">{% if addon.public %}</a>{% endif %}
 					</div>
 					<div class="media-body">
 						<h4 class="media-heading">{{addon.title}}</h4>
