--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -63,7 +63,7 @@
 		</div>
 
 		<div class="tab-pane" id="presentation">
-			<form role=form" method="post" action="{{filename}}?presentation#presentation">
+			<form role=form" method="post" action="{{filename}}#presentation">
 				<input type="hidden" name="state" value="{{state}}">
 				{% include 'functions/alert.twig' with {'selector' : 'presentation'} %}
 				<div class="row">
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+					<button type="submit" class="btn btn-primary" name="addon-submit">{% trans "Save" %}</button>
 				</div>
 			</form>
 		</div>
@@ -100,16 +100,18 @@
 		<div class="tab-pane" id="releases">
 			<div class="row">
 				<div class="col-md-12">
-					<form role=form" class="form-inline" method="post" action="{{filename}}?release#releases">
+					<label for="version">{% trans "New release" %}</label>
+					<form role=form" class="form-inline" method="post" action="{{filename}}#releases">
 						<input type="hidden" name="state" value="{{state}}">
 					{% include 'functions/alert.twig' with {'selector' : 'release'} %}
 						<div class="form-group">
 							<label class="sr-only" for="version	">{% trans "Version"%}</label>
 							<input type="text" class="form-control" name="version" id="version" value="{{version}}" placeholder="{% trans "Version"%}"{% if focus_version %} autofocus{% endif %} required>
 						</div>
-						<button type="submit" class="btn btn-success">{% trans %}Add release{% endtrans %}</button>
+						<button type="submit" class="btn btn-success" name="release-submit">{% trans %}Add release{% endtrans %}</button>
 					</form>
 					<p></p>
+					<label for="type">{% trans "Existing releases" %}</label>
 					<ul class="list-group">
 						{% for release in releases %}
 						<li class="list-group-item">
