rework layout of released addon page

--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -118,6 +118,9 @@ h1 a:active {
 .badge-openclonk {
   background-color: gray;
 }
+#release-presentation-sidebar h2:first-child {
+  margin-top: 0px;
+}
 @media (max-width: 767px) {
   .nav-tabs > li {
     float: none;
