--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -147,6 +147,10 @@ h1 a, h1 a:hover, h1 a:active {
 	background-color: gray;
 }
 
+#release-presentation-sidebar h2:first-child {
+	margin-top: 0px;
+}
+
 @media (max-width: @screen-xs-max) { 
     .nav-tabs > li {
         float: none;
