--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -179,6 +179,18 @@ h1 a, h1 a:hover, h1 a:active {
 	}
 }
 
+.label-primary {
+	background-color: transparent;
+	border: solid 1px #428bca;
+	color: #428bca;
+}
+
+.label-success {
+	background-color: transparent;
+	border: solid 1px #5cb85c;
+	color: #5cb85c;
+}
+
 @media (min-width: @screen-lg-min) {
 	#front .carousel {
 		height: 417px;
