--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -21,7 +21,7 @@
 					<input type="hidden" name="state" value="{{state}}">
 					<div class="form-group">
 						<label for="title">{%trans "Addon" %}</label>
-						<p class="form-control-static"><a href="{{base}}/publish/addons/{{addonid}}#releases">{{title}}</a></p>
+						<p class="form-control-static"><a href="{{base}}/publish/addons/{{addonid}}#releases">{{addontitle}}</a></p>
 					</div>
 					<div class="form-group">
 						<label for="version">{%trans "Version" %}</label>
