reworked tab navigation and added are-you-sure plugin

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -131,3 +131,7 @@
 	</div>
 </div>
 {% endblock %}
+	
+{% block javascript %}
+	$('.tab-pane form').areYouSure({'message':'You have unsaved changes.'});
+{% endblock %}
