--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -121,3 +121,7 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% block javascript %}
+	$('.tab-pane form').areYouSure({'message':'You have unsaved changes.'});
+{% endblock %}
