--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -34,6 +34,7 @@
 		</div>
 	{% endblock %}
 		<script src="{{resources}}/jquery/jquery-2.1.0.min.js"></script>
+		<script src="{{resources}}/jquery/jquery.are-you-sure.js"></script>
 		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
 		<script src="{{resources}}/lorry/js/lorry.js"></script>
 		{% for script in scripts %}
