--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<button type="submit" class="btn btn-success">{% trans "Create addon" %}</button>
+			<button type="submit" class="btn btn-primary">{% trans "Create addon" %}</button>
 		</div>
 	</form>
 </div>
