add javascript translations

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -133,5 +133,5 @@
 {% endblock %}
 	
 {% block javascript %}
-	$('.tab-pane form').areYouSure({'message':'You have unsaved changes.'});
+	$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
 {% endblock %}
