--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -33,6 +33,7 @@
 			</footer>
 		</div>
 	{% endblock %}
+		<script>var translation = {'unsavedChanges':'{% trans %}You have unsaved changes.{% endtrans %}'}</script>
 		<script src="{{resources}}/jquery/jquery-2.1.0.min.js"></script>
 		<script src="{{resources}}/jquery/jquery.are-you-sure.js"></script>
 		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
