--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -123,5 +123,5 @@
 {% endblock %}
 
 {% block javascript %}
-	$('.tab-pane form').areYouSure({'message':'You have unsaved changes.'});
+	$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
 {% endblock %}
