--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -147,10 +147,6 @@ h1 a, h1 a:hover, h1 a:active {
 	background-color: gray;
 }
 
-#release-presentation-sidebar h2:first-child {
-	margin-top: 0px;
-}
-
 @media (max-width: @screen-xs-max) { 
     .nav-tabs > li {
         float: none;
@@ -182,6 +178,12 @@ h1 a, h1 a:hover, h1 a:active {
 @media (min-width: @screen-lg-min) {
 	#front .carousel {
 		height: 417px;
+	}
+}
+
+@media (min-width: @screen-md-min) {
+	.sidebar h1:first-child , .sidebar h2:first-child {
+		margin-top: 0px;
 	}
 }
 
