--- a/app/templates/site/community.twig
+++ b/app/templates/site/community.twig
@@ -3,5 +3,9 @@
 {% set title = 'Community'|trans %}
 
 {% block content %}
-<h1>{{ title }}</h1>
+	<div class="container">
+		<div class="page-header">
+			<h1>{{ title }}</h1>
+		</div>
+	</div>
 {% endblock %}
