--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -75,7 +75,8 @@
 				<dd>{% trans %}ideas and inspiration{% endtrans %},</dd>
 				<br>
 				<div class="head">
-					<dt><a href="https://beheh.de"><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
+					<dt><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">
+					<a href="https://beheh.de">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
 					<dd>{% trans %}concept & development{% endtrans %}.</dd>
 				</div>
 			</dl>
