link heading in media-addon

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -106,6 +106,14 @@ textarea {
 	margin-top: 15px;
 }
 
+.media-addon {
+	text-overflow: ellipsis;
+}
+
+.media-heading a {
+	color: black;
+}
+
 h1 small .label {
 	vertical-align: text-top;
 }
