--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					{% include 'functions/alert.twig' with {'selector' : 'username'} %}
-					<form role=form" method="post" action="{{filename}}?change-username">
+					<form role=form" method="post">
 						<input type="hidden" name="state" value="{{state}}">
 						<div class="form-group">
 							<div class="form-group">
@@ -19,14 +19,14 @@
 								<input type="text" class="form-control" name="username" id="username" value="{{username_edit}}" required>
 							</div>
 							<div class="form-group">
-								<button type="submit" class="btn btn-default">{% trans "Change username" %}</button>
+								<button type="submit" class="btn btn-default" name="change-username-submit">{% trans "Change username" %}</button>
 							</div>
 						</div>
 					</form>
 				</div>
 				<div class="col-md-6">
 					{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
-					<form role=form" method="post" action="{{filename}}?change-contact">
+					<form role=form" method="post">
 						<input type="hidden" name="state" value="{{state}}">
 						<div class="form-group">
 							<label for="email">{% trans "Email address" %}</label>
@@ -38,7 +38,7 @@
 							</label>
 						</div>
 						<div class="form-group">
-							<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
+							<button type="submit" class="btn btn-default" name="change-contact-submit">{% trans "Change email address" %}</button>
 						</div>
 					</form>
 				</div>
