updated publishing portal layout

--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Create a new addon'|trans %}
+{% set title = 'New addon'|trans %}
 
 {% block content %}
 <div class="container">
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<button type="submit" class="btn btn-primary">{% trans "Create addon" %}</button>
+			<button type="submit" class="btn btn-success">{% trans "Create addon" %}</button>
 		</div>
 	</form>
 </div>
