--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -4,10 +4,10 @@
 
 {% block content %}
 <div class="container">
-	<div class="page-header">
-		<h1>{{ title }}{% if addons %} <small><a href="{{filename}}/create" class="label label-success">{% trans %}New addon{% endtrans %}</a></small>{% endif %}</h1>
-	</div>
 {% if addons %}
+	<div class="page-header">
+		<h1>{{ title }} <a href="{{filename}}/create" title="{% trans %}Create a new addon{% endtrans %}"><span class="glyphicon glyphicon-plus"></span></a></h1>
+	</div>
 	<div class="row">
 		<div class="col-md-12">
 			<ul class="media-list addons-small">
@@ -30,6 +30,9 @@
 		</div>
 	</div>
 {% else %}
+	<div class="page-header">
+		<h1>{{ title }}</h1>
+	</div>
 </div>
 <div class="jumbotron">
 	<div class="container">
