--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -6,7 +6,7 @@
 <div class="container">
 {% if addons %}
 	<div class="page-header">
-		<h1>{{ title }} <a href="{{filename}}/create" title="{% trans %}Create a new addon{% endtrans %}"><span class="glyphicon glyphicon-plus"></span></a></h1>
+		<h1>{{ title }} <a href="{{filename}}/create" class="btn btn-default" btitle="{% trans %}Create a new addon{% endtrans %}"><span class="glyphicon glyphicon-plus"></span></a></h1>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
