change placeholder on release page to make versioning more clearer

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -106,7 +106,7 @@
 					{% include 'functions/alert.twig' with {'selector' : 'release'} %}
 						<div class="form-group">
 							<label class="sr-only" for="version	">{% trans "Version"%}</label>
-							<input type="text" class="form-control" name="version" id="version" value="{{version}}" placeholder="{% trans "Version"%}"{% if focus_version %} autofocus{% endif %} required>
+							<input type="text" class="form-control" name="version" id="version" value="{{version}}" placeholder="1.0b"{% if focus_version %} autofocus{% endif %} required>
 						</div>
 						<button type="submit" class="btn btn-success" name="release-submit">{% trans %}Add release{% endtrans %}</button>
 					</form>
@@ -131,7 +131,7 @@
 	</div>
 </div>
 {% endblock %}
-	
+
 {% block javascript %}
 	$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
 {% endblock %}
